--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <ul class="nav-menu">
 
                 <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="produit.html" class="nav-link">Produits</a></li>
+                <li class="nav-item"><a href="produit.html" class="nav-link">products</a></li>
                 <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
                 <li class="nav-item"><a href="signup.html" class="nav-link">Signup</a></li>
                 <li class="nav-item"><a href="contactpage.html" class="nav-link">Contact</a></li>
@@ -80,13 +80,15 @@
                     <img src="images/cat-pc (2).jpg" alt="" />
                 </figure>
                 <div class="article-body">
-                    <h2>PC portable</h2>
+                    <h2>Laptops</h2>
                     <p>
-                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet, congue
-                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+                        Dive into our PC paradise! Uncover a universe of computing possibilities, from high-performance
+                        rigs to budget-friendly laptops. Whether you're a gamer, a creative professional, or a student,
+                        our curated selection offers a PC for every purpose. Explore now and find the ideal computer to
+                        elevate your digital experience. Start shopping!
                     </p>
-                    <a href="#" class="read-more">
-                        Read more <span class="sr-only">about this is some title</span>
+                    <a href="produit.html#pc" class="read-more">
+                        Read more <span class="sr-only"></span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
@@ -103,13 +105,13 @@
                     <img src="images/iphone..jpeg" alt="" />
                 </figure>
                 <div class="article-body">
-                    <h2>Iphone</h2>
+                    <h2>Smartphones</h2>
                     <p>
-                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet, congue
-                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+                        Explore our world of smartphones. Discover the latest models, from flagship powerhouses to
+                        budget-friendly gems. Find the perfect smartphone to suit your needs and style. Shop now!
                     </p>
-                    <a href="#" class="read-more">
-                        Read more <span class="sr-only">about this is some title</span>
+                    <a href="produit.html#smartphone" class="read-more">
+                        Read more <span class="sr-only"></span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
@@ -126,13 +128,14 @@
                     <img src="images/iwatch.jpg" alt="" />
                 </figure>
                 <div class="article-body">
-                    <h2>watch</h2>
+                    <h2>Smart Watches</h2>
                     <p>
-                        Curabitur convallis ac quam vitae laoreet. Nulla mauris ante, euismod sed lacus sit amet, congue
-                        bibendum eros. Etiam mattis lobortis porta. Vestibulum ultrices iaculis enim imperdiet egestas.
+                        Enter the world of smartwatches! Explore an array of cutting-edge timepieces, from stylish
+                        wearables to fitness-focused companions. Discover the perfect smartwatch to complement your
+                        lifestyle and needs. Get yours today!
                     </p>
-                    <a href="#" class="read-more">
-                        Read more <span class="sr-only">about this is some title</span>
+                    <a href="produit.html#smartwatch" class="read-more">
+                        Read more <span class="sr-only"></span>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd"
                                 d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
@@ -158,8 +161,7 @@
             <div class="footeritem">
                 <div class="footertitle">Open hours</div>
                 <ul>
-                    <li>Monday 11am-7pm</li>
-                    <li>Tuesday-Friday 11am-8pm</li>
+                    <li>Monday-Friday 9am-8pm</li>
                     <li>Saturday 10am-6pm</li>
                     <li>Sunday 11am-6pm</li>
                 </ul>
@@ -167,10 +169,9 @@
             <div class="footeritem">
                 <div class="footertitle">Extra Links</div>
                 <ul>
-                    <li><a href="">About</a></li>
+                    <li><a href="produit.html">Produit</a></li>
                     <li><a href="">Service</a></li>
-                    <li><a href="">Company news</a></li>
-                    <li><a href="">Investors</a></li>
+                    <li><a href="">News</a></li>
                 </ul>
             </div>
             <div class="footeritem">
