--- a/produit.html
+++ b/produit.html
@@ -10,9 +10,6 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 
@@ -25,7 +22,7 @@
             <ul class="nav-menu">
 
                 <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="produit.html" class="nav-link">Produits</a></li>
+                <li class="nav-item"><a href="produit.html" class="nav-link">products</a></li>
                 <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
                 <li class="nav-item"><a href="signup.html" class="nav-link">Signup</a></li>
                 <li class="nav-item"><a href="contactpage.html" class="nav-link">Contact</a></li>
@@ -40,7 +37,7 @@
         <div class="titre">
             <h2 class="first-line">Get to know</h2>
             <h1>Our Products</h1>
-            <h2 class="third-line">This is why we are so awesome</h2>
+            <h2 class="third-line">Quality is our priority</h2>
 
         </div>
 
@@ -48,18 +45,19 @@
         <div class="background1">
             <video autoplay muted loop id="myVideo">
                 <source
-                    src="/images/corporate background video _ business background loop _ Workspace _ corporate motion background loop.mp4"
+                    src="corporate background video _ business background loop _ Workspace _ corporate motion background loop.mp4"
                     type="video/mp4">
+                Your browser does not support the video tag.
             </video>
-            <div class="background2">
-            </div>
-
         </div>
+        <div class="background2">
+        </div>
+
 
     </section>
     <!------------------------------------------------------second section------------------------------------------>
     <h1>Portable</h1>
-    <section class="Second">
+    <section id="smartphone" class="Second">
         <section class="product">
             <img src="images/smartphone-huawei-nova-y61-4g-4-go-64-go-double-sim-noir-abonnement-ott-pro-12-mois-offert.jpg"
                 alt="smartphone huawei nova y61">
@@ -204,7 +202,7 @@
         </section>
     </section>
     <h1>Pc Portable</h1>
-    <section class="Second">
+    <section id="pc" class="Second">
         <section class="product">
             <img src="images/pc-portable-lenovo-v15-igl-dual-core-8-go.jpg" alt="pc portable lenovo v15">
             <div>
@@ -336,7 +334,7 @@
         </section>
 
         <h1>Smart Watch</h1>
-        <section class="Second">
+        <section id="smartwatch" class="Second">
             <section class="product">
                 <img src="images/smart-band-atlantis-sport-hr-contact-noir.jpg"
                     alt="smart band atlantis sport hr contact noir">
