--- a/signup.html
+++ b/signup.html
@@ -6,13 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="auth.css">
+    <link rel="stylesheet" href="authentication.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
@@ -21,7 +19,7 @@
             <div class="logo"><a href="home.html"><img src="images/logo2 (2).png" class="nav-logo"></a></div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="produit.html" class="nav-link">produits</a></li>
+                <li class="nav-item"><a href="produit.html" class="nav-link">products</a></li>
                 <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
                 <li class="nav-item"><a href="signup.html" class="nav-link">Signup</a></li>
                 <li class="nav-item"><a href="contactpage.html" class="nav-link">Contact</a></li>
