--- a/home.html
+++ b/home.html
@@ -167,7 +167,7 @@
                 </ul>
             </div>
             <div class="footeritem">
-                <div class="footertitle">Extra Links</div>
+                <div class="footertitle"> Links</div>
                 <ul>
                     <li><a href="produit.html">Produit</a></li>
                     <li><a href="">Service</a></li>
