--- a/login.html
+++ b/login.html
@@ -27,7 +27,9 @@
     </header>
 
     <section class="first_section">
-
+        <div class="image">
+            <img src="images/login.png" alt="login" width="550px">
+        </div>
 
         <div class="authentication-form">
             <h2>Login</h2>
@@ -74,9 +76,9 @@
                 </ul>
             </div>
             <div class="footeritem">
-                <div class="footertitle">Extra Links</div>
+                <div class="footertitle">Links</div>
                 <ul>
-                    <li><a href="">Produit</a></li>
+                    <li><a href="produit.html">Produit</a></li>
                     <li><a href="">Service</a></li>
                     <li><a href="">News</a></li>
                 </ul>
