--- a/produit.html
+++ b/produit.html
@@ -479,9 +479,9 @@
                 </ul>
             </div>
             <div class="footeritem">
-                <div class="footertitle">Extra Links</div>
+                <div class="footertitle">Links</div>
                 <ul>
-                    <li><a href="">Produit</a></li>
+                    <li><a href="produit.html">Produit</a></li>
                     <li><a href="">Service</a></li>
                     <li><a href="">News</a></li>
                 </ul>
