--- a/signup.html
+++ b/signup.html
@@ -78,7 +78,7 @@
                 </ul>
             </div>
             <div class="footeritem">
-                <div class="footertitle">Extra Links</div>
+                <div class="footertitle">Links</div>
                 <ul>
                     <li><a href="">Produit</a></li>
                     <li><a href="">Service</a></li>
