--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
             <h2 class="line-four">We focus on product quality. Just order Now!</h2>
         </div>
         <div class="image1">
-            <img src="images/Logo_home1.png" alt="" height="500px" width="750px">
+            <img src="images/back3.png" alt="" height="370px" width="700px">
         </div>
 
     </section>
